# ai_in_the_background

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  Untitled  docker-compose.yml  environment.yml  main.py  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
website/: __init__.py  config.py  form_app.py  home_dash.py  prompting.py  structured_generation.py
website/templates/: home.html  test.html
